# pythonweb-03

./: Dockerfile  README.md  main.py  pyproject.toml  read.html
storage/: data.json
templates/: error.html  index.html  message.html  read.html
